[CEEZ-62] feat: 트랜잭션 안에서 DB삭제 처리 후 나머지는 이벤트 발행으로 처리